# einkaufsliste

./: .gitignore  Cargo.toml  README.md  TODO.md  assets  deny.toml  out.rs
backend/: .rustfmt.toml  Cargo.toml  run.sh
backend/src/: db.rs  main.rs  response.rs  serve_frontend.rs
backend/src/api/: article.rs  item.rs  item.sync-conflict-20231219-121941-QW5VQBP.rs  mod.rs  shop.rs  user.rs
backend/src/consts/: mod.rs  object_list.rs
backend/src/middleware/: check_login.rs  mod.rs
backend/src/util/: config.rs  errors.rs  identity_ext.rs  mod.rs  serve_frontend.rs  session_store.rs
backend/web_root/: index.html
codegen/: Cargo.toml
codegen/src/: derive_routable.rs  lib.rs
el_macro/: Cargo.toml
el_macro/src/: lib.rs
flontend/: README.md  pubspec.yaml
flontend/android/app/: build.gradle
flontend/android/app/src/main/: AndroidManifest.xml
flontend/android/app/src/main/kotlin/com/example/flontend/: MainActivity.kt
flontend/integration_test/: simple_test.dart
flontend/ios/Runner/: Info.plist
flontend/ios/Runner.xcodeproj/: project.pbxproj
flontend/lib/: login.dart  main.dart
flontend/linux/: CMakeLists.txt  my_application.cc
flontend/macos/Runner.xcodeproj/: project.pbxproj
flontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flontend/macos/Runner/Configs/: AppInfo.xcconfig
flontend/rust/: Cargo.toml
flontend/rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs
flontend/rust/src/api/: api.rs  mod.rs
flontend/web/: index.html  manifest.json
flontend/windows/: CMakeLists.txt
flontend/windows/runner/: Runner.rc  main.cpp
frontend/: Cargo.toml  Dioxus.toml  Trunk.toml  debug_memory.sh  einkaufsliste.css  index.html  input.css  tailwind_watcher.sh  watch_desktop.sh
frontend/src/: completions.rs  index_desktop_html.rs  lib.rs  main.rs
frontend/src/service/: api.rs  backend.rs  list.rs  mod.rs  package-lock.json
frontend/src/tests/: mod.rs
frontend/src/ui/: auth.rs  consts.rs  context.rs  error.rs  home.rs  item.rs  list.rs  login.rs  mod.rs  modal.rs  scaffold.rs  styles.rs  util.rs
frontend/src/util/: codegen.rs  mod.rs  routing.rs
integration_tests/: Cargo.toml  cookies.json
integration_tests/src/: main.rs
lib/: lib.rs  model.rs
lib/model/: article.rs  item.rs  list.rs  mod.rs  requests.rs  session.rs  shop.rs  user.rs
lib/util/: mod.rs
new_frontend/: Cargo.toml  Dioxus.toml  tailwind.config.js
new_frontend/src/: main.rs
new_frontend/src/service/: api.rs
new_frontend/src/ui/: auth.rs  error.rs  home.rs  mod.rs
new_frontend/src/util/: cookies.rs  mod.rs
runner/: Cargo.toml
runner/src/: main.rs
runscript/: Cargo.toml
runscript/src/: main.rs
