[package]
name = "einkaufsliste"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecheck = "0.6"
rkyv = { version = "0.7.42", features = ["bytecheck", "validation", "archive_be"] }
zerocopy = "0.7.30"

actix-web = { version = "4", optional = true }
bytes = { version = "1", optional = true }
futures = { version = "0", optional = true }
async-trait = { version = "0.1.74", optional = true }
log = { version = "*", optional = true }
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde_json = { version = "1.0.108", optional = true }
tracing = "0.1.40"

[features]
default = []
backend = ["actix-web", "bytes", "futures", "async-trait", "log", "serde_json"]

[workspace]
members = ["frontend", "backend", "integration_tests", "runscript", "flontend/rust"]

[lib]
path = "lib/lib.rs"


[profile.release]
lto = "thin" # does not impact build performance significantly when building all crates; do not use for development

[profile.dev]
#opt-level = 3