[package]
name = "backend"
version = "0.1.0"
authors = ["Jonas Lauschke"]
edition = "2021"
license = "AGPL-3.0"

[dependencies]
# Fuck openssl, always breaking builds
actix-web = { version = "4.3.1", features = ["rustls", "secure-cookies"] }
bytecheck = "0.6.11"
bytes = "1.4.0"
env_logger = "0.9.3"
futures = "0.3.28"
log = "0.4.19"
rkyv = { version = "0.7.42", features = [
  "bytecheck",
  "validation",
  "archive_be",
] }
sled = "0.34.7"
tokio = "1.29.1"
zerocopy = "0.6.1"
einkaufsliste = { path = "../", features = ["backend"] }
rustls = "0.20.8"
rustls-pemfile = "1.0.3"
rand = { version = "0.8.5" }
blake3 = "1.4.0"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-identity = "0.5.2"
rand_xoshiro = "0.6.0"
actix-cors = "0.6.4"
mimalloc = { version = "*", default-features = false }
num = "0.4.0"
byteorder = "1.4.3"
anyhow = "1.0.71"
async-trait = "0.1.68"
config = { version = "0.13.3", default-features = false, features = ["toml"] }
actix-files = { version = "0.6.2", optional = true }
mime = "0.3.17"

[features]
default = []
serve_frontend = ["actix-files"]

