[package]
name = "backend"
version = "0.1.0"
authors = ["Jonas Lauschke"]
edition = "2021"
license = "AGPL-3.0"

[dependencies]
# Fuck openssl, always breaking builds
actix-web = { version = "4.4.0", features = ["rustls", "secure-cookies"] }
bytecheck = "0.6"
bytes = "1.5.0"
futures = "0.3.29"
rkyv = { version = "0.7.42", features = [
  "bytecheck",
  "validation",
  "archive_be",
] }
sled = "0.34.7"
tokio = "1.35.0"
zerocopy = "0.7.30"
einkaufsliste = { path = "../", features = ["backend"] }
rustls = "0.20.8"
rustls-pemfile = "1.0.3"
rand = { version = "0.8.5" }
actix-session = { version = "0.8.0", features = ["cookie-session"] }
actix-identity = "0.6.0"
rand_xoshiro = "0.6.0"
actix-cors = "0.6.5"
mimalloc = { version = "*", default-features = false }
num = "0.4.1"
byteorder = "1.5.0"
anyhow = "1.0.75"
async-trait = "0.1.74"
config = { version = "0.13.4", default-features = false, features = ["toml"] }
actix-files = { version = "0.6.2", optional = true }
mime = "0.3.17"
serde_json = { version = "1.0.108", features = ["alloc"] }
tracing-actix-web = "0.7.9"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
argon2 = "0.5.2"
tracing-log = "0.2.0"

[features]
default = []
serve_frontend = ["actix-files"]
