[package]
name = "einkaufsliste-codegen"
version = "0.1.0"
edition = "2021"
authors = ["Hamza <muhammadhamza1311@gmail.com>", "Jonas Lauschke <natrocx@protonmail.ch>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full", "extra-traits"] }

[dev-dependencies]
rustversion = "1"
trybuild = "1"
yew-router = "0.16"
