[package]
name = "web_frontend"
version = "0.1.0"
authors = ["Jonas Lauschke"]
edition = "2021"

license = "AGPL-3.0"

[dependencies]
reqwest = { version = "0.11.12", default-features = false, features = [
  "rustls-tls",
  "brotli",
  "cookies",
  "cookie_crate",
  "cookie_store",
] } # we use rustls because openssl doesn't do wasm
rkyv = { version = "0.7.39", features = ["archive_be"] }
einkaufsliste = { path = "../" }
bytes = "1.2.1"
zerocopy = "0.6.1"
futures = "0.3.24"
log = "0.4.17"
dioxus = "0.3"
dioxus-desktop = "0.3"
dioxus-router = "0.3"
fern = "0.6.1"
chrono = "0.4.23"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
rand = "*"
