[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = [
  "rustls-tls",
  "cookies",
  "brotli",
] }
serde = "1.0.193"
serde_json = { version = "1.0.108", features = ["alloc"] }
einkaufsliste = { path = "../" }
bytes = "1.5.0"
rkyv = "0.7.42"
async-std = "1.12.0"
tracing = "0.1.37"

tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
url = "2.5.0"
platform-dirs = "0.3.0"
fermi = "0.4.3"
const_format = "0.2.32"
lazy_static = "1.4.0"
iced = { version = "0.10.0", features = ["tokio", "image", "advanced"] }
iced_aw = { version = "0.7.0", features = ["floating_element", "icons", "icon_text", "wrap"], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sled = "0.34.7"
reqwest_cookie_store = "0.6.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-subscriber-wasm = "0.1.0"


[features]
default = ["dev-certificate"]
dev-certificate = []
