[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.7", features = ["derive"] }

notify = "5.0.0"
nix = "0.25.0"
log = "0.4.17"
notify-debouncer-mini = "0.2.1"
