[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }

notify = "5.2.0"
nix = "0.25.1"
log = "0.4.19"
notify-debouncer-mini = "0.2.1"
