[package]
name = "rust_lib"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.8"
einkaufsliste = { path = "../.." }
reqwest = { version = "0.11", default-features = false, features = [
  "rustls-tls",
  "cookies",
  "brotli",
] }
serde = "1.0.193"
serde_json = { version = "1.0.108", features = ["alloc"] }
bytes = "1.5.0"
rkyv = "0.7.42"
async-std = "1.12.0"
tracing = "0.1.40"

tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
url = "2.5.0"
platform-dirs = "0.3.0"
lazy_static = "1.4.0"

sled = "0.34.7"
reqwest_cookie_store = "0.6.0"